--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Algo Wallet</title>
+    <title>Vote Coin App</title>
     <style type="text/css">body, html {height: 100%;}</style>
   </head>
   <body>
